# inverse-kinematics-algorithms

./: CMakeLists.txt  Cyclic Coordinate Descent Algorithmus.sln  Cyclic Coordinate Descent Algorithmus.vcxproj  Inverse-Kinematics-Algorithms.sln  Inverse-Kinematics-Algorithms.vcxproj  Inverse-Kinematics-Algorithms.vcxproj.filters  LICENSE  README.md
Cyclic Coordinate Descent Algorithmus/: CCD.cpp  CCD.h  Cyclic Coordinate Descent Algorithmus.vcxproj  Cyclic Coordinate Descent Algorithmus.vcxproj.filters  FABRIK.cpp  FABRIK.h  Skeleton.cpp  Skeleton.h  SkeletonNode.cpp  SkeletonNode.h  Vector2D.cpp  Vector2D.h  main.cpp
demos/ik_console_demo/: CMakeLists.txt  main.cpp
demos/ik_gui_demo/: CMakeLists.txt  IKMainWindow.cpp  IKMainWindow.h  IKMainWindow.ui  main.cpp  resources.qrc
example/: CMakeLists.txt  main.cpp
src/: Bone.cpp  Bone.h  CCD.cpp  CCD.h  FABRIK.cpp  FABRIK.h  IKSolver.h  InverseKinematicsSolver.cpp  InverseKinematicsSolver.h  Skeleton.cpp  Skeleton.h  SkeletonNode.cpp  SkeletonNode.h  Vector2.cpp  Vector2.h  Vector2D.cpp  Vector2D.h  main.cpp
